<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_share"
            android:src="@drawable/ic_title_share"
            android:onClick="onShareClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:onClick="onSearchClick" />
    </LinearLayout>

	<ScrollView style="@style/base_fill" android:background="@drawable/bg_rummble">
		<LinearLayout style="@style/base_fill">
			<RelativeLayout style="@style/about_top_div">
			
			    <RelativeLayout style="@style/about_maintxt_div">
			    	<ImageView style="@style/rummble_title" />
				    <TextView style="@style/rummble_maintxt_txt" />
				    <TextView style="@style/rummble_link_explanation" />
			    </RelativeLayout>
			    
			    <RelativeLayout style="@style/about_mainImgs_div">
			        <ImageView style="@style/rummble_img1" />
			    	<ImageView style="@style/rummble_img2" />
			    	<ImageView style="@style/rummble_img3" />
			    </RelativeLayout>    	
			 
			 </RelativeLayout> 
			    
			 <ImageButton style="@style/rummble_btn_open" android:onClick="onRummbleButtonClick" />
			    
			<RelativeLayout style="@style/about_bottom_div">
			    <RelativeLayout style="@style/about_details_div">
  			    	    	    	    	    	    	    	
			    	<TextView style="@style/rummble_link" />   			    	    	    	    	    	    	    	
			    </RelativeLayout>
			   	<ImageView style="@style/rummble_bottom_img" />
		 	</RelativeLayout>
		 	
		</LinearLayout>		 	
	 </ScrollView>
</LinearLayout>
