<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_refresh"
            android:onClick="onRefreshClick" />
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:visibility="gone"
            android:layout_alignLeft="@id/btn_title_refresh"
            android:layout_alignTop="@id/btn_title_refresh"
            android:id="@+id/title_refresh_progress" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:onClick="onSearchClick" />
    </LinearLayout>

	
	<RelativeLayout style="@style/about_top_div">
	
	    <LinearLayout style="@style/about_maintxt_div">
		    <TextView style="@style/about_maintxt_title" />
		    <TextView style="@style/about_maintxt_subtitle" />
		    <TextView style="@style/about_maintxt_txt" />
	    </LinearLayout>
	    
	    <LinearLayout style="@style/about_mainImgs_div">
	        <ImageView style="@style/about_mainImgs_img1" />
	    	<ImageView style="@style/about_mainImgs_img2" />
	    	<ImageView style="@style/about_mainImgs_img3" />
	    </LinearLayout>    	
	 
	 </RelativeLayout> 
	    
	 <ImageButton style="@style/about_btn_buynow" />
	    
	<RelativeLayout style="@style/about_bottom_div">
	    <LinearLayout style="@style/about_details_div">
	    	<TextView style="@style/about_address_title" />
	    	<TextView style="@style/about_address_txt" />    	    	    	
	    	<TextView style="@style/about_twitter" />
	    	<TextView style="@style/about_twitter_hashtag" />    	    	    	
	    </LinearLayout>
	       
	    <LinearLayout style="@style/about_sponsors_div">
	    	<TextView style="@style/about_sponsors_img" />
	    	<TextView style="@style/about_sponsors_img3" />
	    	<TextView style="@style/about_sponsors_img4" />    	    	    	    	    	
	    </LinearLayout>
	    
	    <TextView style="@style/about_conference_link" />   
 	</RelativeLayout>   
</LinearLayout>
